[package]
name = "blackboxer_new"
version = "0.1.0"
edition = "2024"

[lib]
name = "blackboxer"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mavlink = "0.11"
bincode = "1.3"

[[bin]]
name = "blackboxer_new"
path = "src/main.rs"

[[bin]]
name = "read_bbin"
path = "src/read_bbin.rs"