[package]
name = "blackboxer"
version = "0.1.1"
edition = "2021"
description = "A Rust library for capturing, logging, and replaying MAVLink messages"
authors = ["Vivek Patwari <vivekpatwari38@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/Vivek2518/Blackbox-rs"
keywords = ["mavlink", "drone", "logging", "replay", "robotics"]
categories = ["embedded", "encoding"]

[lib]
name = "blackboxer"
path = "src/lib.rs"

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
mavlink = "0.11"
bincode = "1.3"

[[bin]]
name = "mavlink-capture"
path = "src/bin/main.rs"

[[bin]]
name = "read-bbin"
path = "src/bin/read_bbin.rs"

[[bin]]
name = "replay-bbin"
path = "src/bin/replay_bbin.rs"